--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shows"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.ShowDetailsActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.ShowsActivity"/>
         <activity
             android:name=".ui.ShowsActivity"
             android:exported="false"/>
