--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:theme="@style/Theme.Shows"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ShowDetailsActivity"
+            android:name=".show_details.ShowDetailsActivity"
             android:exported="false"
             android:parentActivityName=".ui.ShowsActivity"/>
         <activity
             android:name=".ui.ShowsActivity"
             android:exported="false"/>
         <activity
-            android:name=".ui.LoginActivity"
+            android:name=".login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
