--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -10,7 +11,7 @@ android {
     defaultConfig {
         applicationId "infinuma.android.shows"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -49,9 +50,14 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0w'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.core:core-ktx:1.10.1'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.6.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
-
+    implementation "androidx.fragment:fragment:1.6.0"
+    implementation "androidx.fragment:fragment-ktx:1.6.0"
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.6.0")
+    androidTestImplementation("androidx.navigation:navigation-testing:2.6.0")
 }
