--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,7 @@
         android:theme="@style/Theme.Shows"
         tools:targetApi="31">
         <activity
-            android:name=".show_details.ShowDetailsActivity"
-            android:exported="false"
-            android:parentActivityName=".ui.ShowsActivity"/>
-        <activity
-            android:name=".ui.ShowsActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".login.LoginActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
