--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.6.0")
     androidTestImplementation("androidx.navigation:navigation-testing:2.6.0")
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 }
