--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
