--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,11 +62,13 @@ dependencies {
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.6.0")
     androidTestImplementation("androidx.navigation:navigation-testing:2.6.0")
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
     implementation "com.squareup.okhttp3:okhttp:4.11.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
 }
