--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    //for some reason kotlin 1.9.0 caused exceptions when dao methods were declared as suspend
+    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.6.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.21'
 }
