--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon_square"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Shows"
-        tools:targetApi="31">
+        android:theme="@style/Theme.MyApp.Starting"
+        tools:targetApi="34"
+        >
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
