--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/app_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApp.Starting"
+        android:theme="@style/Theme.Shows.Starting"
         tools:targetApi="34"
         >
         <activity
